Fix moment formatting errors on mobile devices

--- a/src/index.scss
+++ b/src/index.scss
@@ -11,11 +11,11 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0px 60px;
+  overflow: auto;
 }
 
 body,
 main {
-  min-height: 100vh;
   font-family: 'Lato', sans-serif;
 }
 
